hotfix: fix hightlight tap on mobile (#hot)

--- a/static/global.css
+++ b/static/global.css
@@ -112,6 +112,7 @@ a{
 	text-decoration: none;
 	color: unset;
 }
+div,
 input,
 textarea,
 button,
